# AoC_2025

./: .gitignore  README.md
benchmark/: Cargo.toml
benchmark/src/: main.rs
day1/src/: lib.rs  main.rs
day10/src/: lib.rs  main.rs
day11/src/: lib.rs  main.rs
day12/src/: lib.rs  main.rs
day2/src/: lib.rs  main.rs
day3/src/: lib.rs  main.rs
day4/src/: lib.rs  main.rs
day5/src/: lib.rs  main.rs
day6/src/: lib.rs  main.rs
day7/src/: lib.rs  main.rs
day8/src/: lib.rs  main.rs
day9/src/: lib.rs  main.rs
