[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
day1 = { version = "0.1.0", path = "../day1" }
day2 = { version = "0.1.0", path = "../day2" }
day3 = { version = "0.1.0", path = "../day3" }
day4 = { version = "0.1.0", path = "../day4" }
day5 = { version = "0.1.0", path = "../day5" }
