[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
day1 = { version = "0.1.0", path = "../day1" }
day10 = { version = "0.1.0", path = "../day10" }
day2 = { version = "0.1.0", path = "../day2" }
day3 = { version = "0.1.0", path = "../day3" }
day4 = { version = "0.1.0", path = "../day4" }
day5 = { version = "0.1.0", path = "../day5" }
day6 = { version = "0.1.0", path = "../day6" }
day7 = { version = "0.1.0", path = "../day7" }
day8 = { version = "0.1.0", path = "../day8" }
day9 = { version = "0.1.0", path = "../day9" }
